docs/css/amogitech.css
body, html {
	padding: 0px;
	margin: 0px;
	overflow: hidden;
}

@keyframes bounce {
	0%, 50%, 100% {
		transform: translateY(0); }
	25% {
		transform: translateY(-10px); }
	75% {
		transform: translateY(-6px); 
	} 
}

.show {
	display: initial!important;
}

.hidden {
	display: none!important;
}

#background {
	position: fixed;
	min-height: 100vh;
	min-width: 100vw;
	top: 0;
	left: 0;
}

#container {
	position: fixed;
	height: 100vh;
	width: 100vw;
	text-align: center;
	font-family: 'Geo', sans-serif;
}

#center {
	position: absolute;
	width: 70%;
	max-width: 800px;
	height: 60%;
	left: 50%;
	margin-right: -50%;
	transform: translateX(-50%);
	padding: 120px 0;
}

#logo {	
	animation: bounce 3s infinite;
	animation-timing-function: linear;
	max-width: 900px;
}

#fixed-logo {	
	width: 200px;
	position: fixed;
	top: 20px;
	left: 20px;
}

#logo-div {
	width: 100%;
	position: fixed;
	top: 40%;
}

#amogi-canvas {
	width: 100%;
	max-width: 100%;
	animation: bounce 3s infinite;
	animation-timing-function: linear;
}

#amogi-button {
	font-size: 5vh;
	color: white;
	cursor: pointer;
	border-style: solid;
	border-width: 3px;
	border-radius: 5px;
	padding: 5px;
	margin-bottom: 10px;
}

#amogi-file {
	opacity: 0;
	position: absolute;
	z-index: -1;
}

